# aivo-platform

./: .gitignore  .lighthouserc.json  .pa11yci.json  AIVO_QA_AUDIT_REPORT.md  ENTERPRISE_QA_AUDIT_ADDENDUM_2026-01-09.md  ENTERPRISE_QA_AUDIT_REPORT.md  LESSON_BUILDER_IMPLEMENTATION.md  UI_UX_AUDIT_REPORT.md  docker-compose.observability.yml  eslint.config.mjs  lint-staged.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.cjs  tsconfig.base.json  tsconfig.compat.json  turbo.json  vitest.integration.config.ts
.github/: CODEOWNERS  pull_request_template.md  renovate.json
services/ml-recommendation-svc/: .env.example  README.md  pyproject.toml
services/ml-recommendation-svc/src/: __init__.py  config.py  main.py
services/ml-recommendation-svc/src/compliance/: __init__.py  ferpa_compliance.py
services/ml-recommendation-svc/src/jobs/: __init__.py  prediction_scheduler.py
services/ml-recommendation-svc/src/models/: __init__.py  schemas.py  student_risk_model.py
services/ml-recommendation-svc/src/routers/: __init__.py  health.py  predictive_analytics.py  recommendations.py
services/ml-recommendation-svc/src/services/: __init__.py  ab_testing.py  bias_detection.py  feature_store.py  intervention_recommender.py  message_consumer.py  model_monitoring.py  recommendation_engine.py
services/ml-recommendation-svc/src/training/: __init__.py  model_trainer.py
services/ml-recommendation-svc/tests/: test_bias_detection.py  test_integration.py  test_intervention_recommender.py  test_recommendation_engine.py  test_student_risk_model.py
(+4048 files in other folders)
